// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Amex renders Amex component 1`] = `
.c0 {
  width: 132px;
}

<div
  className="c0"
>
  <MasterCardIcon />
</div>
`;

exports[`COMPONENT - Amex renders small Amex component 1`] = `
.c0 {
  width: 40px;
}

<div
  className="c0"
>
  <MasterCardIcon />
</div>
`;
